| Summary: | ASTERISK-22426: features: Asterisk 12 fails to start without feature.conf present | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2013-08-29 08:56:16 | Date Closed: | 2013-08-30 12:03:06 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Features |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Asterisk 12 fails to start if no {{features.conf}} is present. This should not be a required configuration file.
If {{features.conf}} is not provided, defaults should be used and Asterisk should continue to load. | ||
| Comments: | |||